# MiniCraft

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
.github/workflows/: build-windows.yml
assets/: blocks.json
assets/scripts/: hello.js  test.js
assets/shaders/: basic.frag.glsl  basic.vert.glsl
quickjs/: CMakeLists.txt  quickjs.c
src/: MiniCraft.cpp  MiniCraft.hpp  main.cpp  quickjspp.hpp  test.cpp
src/engine/: Camera.cpp  Camera.hpp  Input.cpp  Input.hpp  ShaderProgram.cpp  ShaderProgram.hpp  TextureArray.cpp  TextureArray.hpp  Timer.cpp  Timer.hpp  Types.hpp  Window.cpp  Window.hpp  io.hpp  vec3hash.hpp
src/game/: Block.hpp  BlockFace.hpp  BlockRegistry.cpp  BlockRegistry.hpp  Chunk.cpp  Chunk.hpp  Vertex.hpp
